--- a/TJs_Fans_v1/package.json
+++ b/TJs_Fans_v1/package.json
@@ -12,8 +12,10 @@
   "author": "Michelle Domingo",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.3.0",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
@@ -21,8 +23,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-jwt": "^6.0.0",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
+    "express-validator": "^6.6.1",
+    "google-auth-library": "^6.1.2",
     "helmet": "^4.1.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
