--- a/TJs_Fans_v1.1/server/package.json
+++ b/TJs_Fans_v1.1/server/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^6.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14"
   }
 }
