--- a/TJs_Fans_v1.1/server/package.json
+++ b/TJs_Fans_v1.1/server/package.json
@@ -10,9 +10,9 @@
   "author": "Michelle Domingo",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.3.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
