--- a/TJs_Fans_v1.1/client/package.json
+++ b/TJs_Fans_v1.1/client/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.0",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-toastify": "^6.0.9",
-    "typescript": "^4.0.3"
+    "react-toastify": "^6.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
