--- a/TJ_Fans_v1.2/client/package.json
+++ b/TJ_Fans_v1.2/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-toastify": "^6.0.9"
+    "react-toastify": "^6.0.9",
+    "store2": "^2.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
